# memshare

./: Makefile.am  README.md  configure.ac
src/: memshare.c  memshare.h  memshare_api.h  memwatch.c  queue.c
src/examples/: tlog.c  tlog_api.h  tlogmain.c
src/test/: monitor.c  reply.c  replyer.c  testmain.c
